<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tomvandesteene.i4m.AddProfileActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_photo"
            android:layout_width="110dp"
            android:layout_height="160dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:src="@drawable/logo"/>

        <android.support.v7.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextFirstName"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_first_name"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:textAlignment="viewStart"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextLastName"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:hint="@string/hint_last_name"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:textAlignment="viewStart"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextTelephone"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:hint="@string/hint_telephone"
                android:inputType="phone"
                android:maxLines="1"
                android:textAlignment="viewStart"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextEmail"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textAlignment="viewStart"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextStreetNumber"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_street_number"
            android:inputType="number"
            android:maxLines="1"
            android:textAlignment="viewStart"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextStreet"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:hint="@string/hint_street"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textAlignment="viewStart"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent" />
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextPostalCode"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_postal_code"
            android:inputType="number"
            android:maxLines="1"
            android:textAlignment="viewStart"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextLocation"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:hint="@string/hint_location"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textAlignment="viewStart"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent" />
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_marginTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <TextView
            android:id="@+id/tv_1st_language"
            android:layout_weight="1"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_2nd_language"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_3rd_language"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorAccent"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_4th_language"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_1st_language"
            android:text="@string/text_btn_1st_lanuage"
            android:background="@drawable/btn_gradient"
            android:layout_weight="1"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_2nd__language"
            android:text="@string/text_btn_2nd_lanuage"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btn_gradient"
            android:layout_weight="1"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_3rd_language"
            android:text="@string/text_btn_3rd_lanuage"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btn_gradient"
            android:textColor="@color/colorAccent"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_4th_language"
            android:text="@string/text_btn_4th_lanuage"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btn_gradient"
            android:layout_weight="1"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.LinearLayoutCompat>
